--- a/Praktikum3-roundrobin/apache2-worker2/Vagrantfile
+++ b/Praktikum3-roundrobin/apache2-worker2/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "hashicorp/precise64"
+  config.vm.box = "ubuntu/xenial64"
   config.vm.provision "shell", path: "bootstrap.sh"
 
   # Disable automatic box update checking. If you disable this, then
@@ -27,7 +27,7 @@ Vagrant.configure(2) do |config|
 
   # Create a private network, which allows host-only access to the machine
   # using a specific IP.
-  config.vm.network "private_network", ip: "192.168.1.4"
+  config.vm.network "private_network", ip: "192.168.10.12"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
